# iMCP

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  ‫iMCP_docs.html
config/: settings.py  urls.py  wsgi.py
imcp/: __init__.py  admin.py  apps.py  decorators.py  urls.py
imcp/management/: __init__.py
imcp/management/commands/: imcp_health_check.py
imcp/middleware/: __init__.py  imcp.py
imcp/migrations/: 0001_initial.py  0002_toolcachemetadata_generated_at_default.py  0003_service_credentials.py  __init__.py
imcp/models/: __init__.py  api_key.py  audit.py  service.py  tool_cache.py
imcp/services/: __init__.py  _settings.py  audit.py  auth_headers.py  cache.py  encryption.py  executor.py  health_checker.py  mcp_json_executor.py  mcp_json_parser.py  oauth.py  openapi_executor.py  openapi_parser.py  redaction.py  schema_converter.py  tool_generator.py  wsdl_parser.py
imcp/templates/imcp/: base.html  dashboard.html  service_catalog.html  status.html  test_console.html  tokens.html  tool_registry.html
imcp/templates/imcp/components/: sidebar_link.html  tools_list.html
imcp/templatetags/: imcp_tags.py
imcp/tests/: __init__.py  test_admin_services.py  test_audit_service.py  test_mcp_views.py  test_models.py  test_services.py
imcp/views/: __init__.py  auth.py  mcp.py
imcp/views/admin/: __init__.py  api_keys.py  pages.py  services.py  status.py  test.py  tools.py
